Some Bootstrap fixes, produce the correct graphs

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col">
     <form method="POST" action="{{ url_for('coffee.submit_payment')}}" class="form-signin">
         {{ payment_form.hidden_tag() }}
         <h3 class="form-signin-heading">Payment</h3>
@@ -20,7 +20,7 @@
         <button class="btn btn-primary btn-block" type="submit">Submit</button>
     </form>
   </div>
-  <div class="col-md-4">
+  <div class="col">
     <form method="POST" action="{{ url_for('coffee.administrate_consumption') }}" class="form-signin">
         {{ consumption_form.hidden_tag() }}
         <h3 class="form-signin-heading">Consumption</h3>
@@ -35,7 +35,7 @@
         <button class="btn btn-primary btn-block" type="submit">Submit</button>
     </form>
   </div>
-  <div class="col-md-4">
+  <div class="col">
     <form method="POST" action="{{ url_for('coffee.administrate_expenses') }}" class="form-signin">
         {{ expense_form.hidden_tag() }}
         <h3 class="form-signin-heading">Expense</h3>
@@ -61,13 +61,13 @@
   </h3>
   <div class="form-group row">
     {{ mail_form.hidden_tag() }}
-    <div class="col-xs-5">
+    <div class="col-5">
       {{ mail_form.mail_user(class="form-control", placeholder="Mail User")}}
     </div>
-    <div class="col-xs-5">
+    <div class="col-5">
       {{ mail_form.password(class="form-control", placeholder="Password")}}
     </div>
-    <div class="col-xs-2">
+    <div class="col-2">
       <button class="btn btn-primary btn-block" type="submit">Save</button>
     </div>
   </div>
