--- a/templates/personal.html
+++ b/templates/personal.html
@@ -29,7 +29,7 @@
   Plotly.d3.json('{{ url_for('coffee.global_api', function='personal_data') }}', function(err, response){
     var data = response.data;
     var trace = {
-      y: data.map(x => x.amount / 100),
+      y: data.map((a, i) => (a.amount + data.slice(0, i).map(a => a.amount).reduce((a, b) => a + b, 0)) / 100),
       x: data.map(x => x.date),
       type: 'date',
     };
