--- a/templates/app.html
+++ b/templates/app.html
@@ -1,7 +1,7 @@
 {% extends 'default.html' %}
 
 {% block body %}
-<div id="main"></div>
+<div id="main">Loading...</div>
 {% endblock %}
 
 {% block scripts %}
